@@ -1,18 +1,22 @@
 package com.codewell.server;
 
-import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.boot.builder.SpringApplicationBuilder;
+import org.springframework.boot.web.servlet.support.SpringBootServletInitializer;
 
-import java.util.Collections;
+import java.util.Map;
 
 @SpringBootApplication
-public class ServiceRunner
+@EnableAutoConfiguration
+public class ServiceRunner extends SpringBootServletInitializer
 {
+	private static final String SERVER_PORT = "server.port";
+	private static final String PORT = "5000";
+
 	public static void main(String[] args)
 	{
-		System.setProperty("server.servlet.context-path", "/api");
-		final SpringApplication app = new SpringApplication(ServiceRunner.class);
-		app.setDefaultProperties(Collections.singletonMap("server.port", "5000"));
-		app.run(args);
+		Map<String, Object> props = Map.of(SERVER_PORT, PORT);
+		new ServiceRunner().configure(new SpringApplicationBuilder(ServiceRunner.class).properties(props)).run(args);
 	}
 }
